TASK-44775 Add additional JDK 11 properties (#77)